  Added detection of newer versions of connection files and database schemata. mRemoteNG will now refuse to open them to avoid data loss.
  Improved appearance and discoverability of the connection search box.
  If RDC 7.0 or higher is installed, the connection bar is no longer briefly shown when connecting to an RDP connection with redirect key combinations enabled.

  Fixed issue MR-339 - Connection group collapses with just one click
  Fixed issue MR-340 - Object reference not set to an instance of an object.
  Fixed issue MR-344 - Move "Always show panel tabs" option
  Fixed issue MR-350 - VerifyDatabaseVersion (Config.Connections.Save) failed. Version string portion was too short or too long.
  Fixed tabs not closing on double-click when the active tab is a PuTTY connection.

1.70 (2013-02-25):
  Fixed issue MR-332 - Can't select different tab with one click after disconnecting existing tab
  Fixed issue MR-338 - PuTTYNG crashing on fresh install of mRemoteNG
  Re-enabled PuTTYNG integration enhancements on Windows 8

1.70 Release Candidate 1 (2013-02-22):
  Fixed issue MR-183 - Error trying to save connections when using SQL - Invalid column name _parentConstantId
  Fixed issue MR-225 - Tabs do not open in a panel until multiple panels are displayed.
  Fixed issue MR-229 - Integrated PuTTY doesn't work in Windows 8 RP
  Fixed issue MR-264 - Windows 8 support
  Fixed issue MR-317 - Difficulty right-clicking on Tab
  Fixed issue MR-318 - Wrong tab gets selected when tab names overflow on the tab bar
  Fixed issue MR-321 - New connection panel doesn't get panel header if its the only one or is moved
  Fixed issue MR-322 - Connection Button not listing servers
  Added option to always show panel tabs.
  Fixed "Decryption failed. Padding is invalid and cannot be removed." notification.
  Fixed KiTTY opening in a separate window when using a saved session.

1.70 Beta 2 (2013-02-18):
  Fixed issue MR-47 - Silent Installation Prompts for Language